# ImperialHouseholdAgency

./: .envrc  .example.env  .test.env  CLAUDE.md  Makefile  README.md  compose.deploy.yml  compose.developer.yml  compose.test.yml  config.py  main.py  pyproject.toml  renovate.json
.github/workflows/: on-push.yml  template-build-and-push.yml  template-python-ci.yml
docker/postgresql/: Dockerfile
docker/postgresql/init.d/: 01-init-db.sql
docker/python/: Dockerfile
env/: test.env
migration/: env.py  script.py.mako
migration/versions/: 87e1bd665ac8_create_initial_tables.py  b59d27038977_seed_discord_messenger.py
src/: conftest.py
src/common/: interface.py
src/common/config/: interface.py
src/common/di/: builder.py  test_builder.py
src/di/: builder.py  container.py
src/di/module/domain/config/: pydantic.py
src/domain/: config.py
src/domain/interface/repository/: messenger.py  user.py
src/domain/interface/repository/common/: base.py  response.py  session.py  type.py
src/domain/model/: messenger.py  nickname.py  user.py
src/domain/value/: messenger.py  nickname.py  user.py
src/domain/value/base/: identifier.py  time.py
src/infrastructure/repository/sqlalchemy/: config.py
src/infrastructure/sentry/: init.py
src/system/di/: container.py  test_container.py
src/system/domain/: config.py
src/system/domain/model/: base.py  messenger.py  nickname.py  user.py
src/system/domain/value/: messenger.py  nickname.py  user.py
src/system/handler/: context.py
src/system/handler/base/: interface.py
src/system/infrastructure/logfire/: config.py  init.py
src/system/infrastructure/sentry/: config.py  init.py
src/system/ui/discord/: bot.py  config.py  error_handler.py  test_bot.py  test_error_handler.py
src/system/usecase/base/: dto.py  interface.py  test_dto.py  test_interface.py
src/system/usecase/nickname/: dto.py  interface.py  record_nickname_change.py  test_dto.py  test_interface.py  test_record_nickname_change.py
src/system/util/: id.py
src/ui/discord/: config.py
src/util/: id.py
test/: conftest.py
test/di/: test_container.py
test/domain/: test_config.py
test/infrastructure/repository/sqlalchemy/: test_config.py
test/system/di/: test_container.py
test/system/domain/: test_config.py
test/system/ui/discord/: test_config.py
test/ui/discord/: test_config.py
(+76 files in other folders)
