[project]
name = "imperialhouseholdagency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "discord-py>=2.6.3",
    "injector>=0.22.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-ulid>=3.1.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.12",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
