[project]
name = "imperialhouseholdagency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "discord-py>=2.6.3",
    "injector>=0.22.0",
    "logfire>=4.15.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-ulid>=3.1.0",
    "sentry-sdk>=2.37.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pip-licenses>=5.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.13.0",
    "ty>=0.0.4",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
exclude = [
  "migration/"
]

[tool.ruff]
exclude = [
  "migration/"
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml --cov-report=term-missing"
testpaths = ["test"]

[tool.coverage.run]
source = ["."]
omit = [
    "test/*",
    "migration/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
